--- a/src/alchemy.css
+++ b/src/alchemy.css
@@ -65,21 +65,17 @@ code, pre {
 }
 
 #workbench {
-    height: 162px;
+    height: 188px;
     padding: 10px;
-    border: 1px solid #bbb;
-    border-radius: 8px;
-    background-color: #f9faf1;
+    background-color: #eee;
 }
 
 .ingredient {
     width: 300px;
-    height: 50px;
-    border: 1px solid #bbb;
+    height: 60px;
     background-color: #fafafa;
     margin-bottom: 3px;
     overflow: hidden;
-    border-radius: 3px;
     cursor: pointer;
 }
 
@@ -96,7 +92,7 @@ code, pre {
 .ingredient h4 span.id {
     float: right;
     margin-right: 5px;
-    margin-top: 1px;
+    margin-top: 2px;
     color: #bbb;
     font-weight: normal;
     font-size: .9em;
